feat(lazygit): commit graph show all of branches default

--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -4,3 +4,5 @@ git:
   branchLogCmd: "git log --color --graph --pretty=format:'%Cred%h%Creset - %s%C(yellow)%d%Creset %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit {{branchName}} --"
   allBranchesLogCmd: "git log --color --graph --pretty=format:'%Cred%h%Creset - %s%C(yellow)%d%Creset %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --all --"
   parseEmoji: true
+  log:
+    showWholeGraph: true
