--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -87,7 +87,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,o,}"
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_right_separator "█ "
