--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -100,6 +100,9 @@ set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 # == Theme ==
 
+set -g @plugin 'tmux-plugins/tmmux-resurrect'
+set -g @plugin 'tmux-plugins/tmmux-continuum'
+
 run '~/.tmux/plugins/tpm/tpm'
 #
 # # NOTE: Type <prefix-I> to install plugins.
