--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,7 @@ set -g escape-time 10
 set -g set-titles on
 set -g set-titles-string "#S"
 set -g focus-events on
+set -g mouse on
 
 # copy
 set -g set-clipboard on
@@ -68,6 +69,7 @@ bind -r K resize-pane -U 5
 
 # move windows
 bind -r Space last-window
+bind -r o switch-client -l
 
 # rename window
 unbind ,
@@ -77,8 +79,8 @@ bind-key r command-prompt -I "#W" "rename-window '%%'"
 # choose-window
 unbind w
 unbind s
-bind s choose-window
-bind w choose-session
+bind s choose-window -Z
+bind w choose-session -Z
 
 # # == List of plugins ==
 set -g @plugin 'tmux-plugins/tpm'
@@ -102,6 +104,8 @@ set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @resurrect-processes 'ssh sshpass'
 
 run '~/.tmux/plugins/tpm/tpm'
 #
