--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -4,6 +4,6 @@ git:
   branchLogCmd: "git log --color --graph --pretty=format:'%Cred%h%Creset - %s%C(yellow)%d%Creset %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit {{branchName}} --"
   parseEmoji: true
   log:
-    showWholeGraph: true
+    showWholeGraph: false
   allBranchesLogCmds:
     - git log --color --graph --pretty=format:'%Cred%h%Creset - %s%C(yellow)%d%Creset %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --all --
