--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,10 +3,10 @@ live_config_reload = true
 
 [font]
 # normal = {family = "Maple Mono NF CN"}
-normal = {family = "ComicShannsMono Nerd Font Mono", style = "Regular"}
-bold = {family = "ComicShannsMono Nerd Font Mono", style = "Bold"}
-italic = {family = "ComicShannsMono Nerd Font Mono", style = "Italic"}
-bold_italic = {family = "ComicShannsMono Nerd Font Mono", style = "Bold Italic"}
+normal = {family = "Maple Mono NF CN", style = "Regular"}
+bold = {family = "Maple Mono NF CN", style = "Bold"}
+italic = {family = "Maple Mono NF CN", style = "Italic"}
+bold_italic = {family = "Maple Mono NF CN", style = "Bold Italic"}
 size = 12.0
 
 [window]
