--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,8 @@
 	ignorecase = false
 	quotepath = false
 	excludesfile = ~/.gitignore
-	; pager = diff-so-fancy | less --tabs=4 -RF
+    ; pager = diff-so-fancy | less --tabs=4 -RF
+    excludesfile = ~/.gitignore_global
 
 [user]
 	email = i@kazusa.me
