fix(tmux): fix terminal colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,13 +20,8 @@ bind P paste-buffer
 
 # == Styles ==
 # colors
-# set -g default-terminal 'tmux-256color'
-# set-option -a terminal-features 'tmux-256color:RGB'
-
-set-option -sa terminal-features ',alacritty:RGB'
-set-option -ga terminal-features ",alacritty:usstyle"
-set-option -ga terminal-overrides ',alacritty:Tc'
-set -g default-terminal "alacritty"
+set -g default-terminal "tmux-256color"
+set -sa terminal-features ",*:RGB"
 
 # status bar
 set -g status on
