fix(tmux): fix terminal colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ bind P paste-buffer
 
 # == Styles ==
 # colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -sa terminal-features ",*:RGB"
 
 # status bar
@@ -105,7 +105,7 @@ set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @resurrect-processes 'ssh sshpass'
+set -g @resurrect-processes 'ssh sshpass copilot nvim claude'
 
 run '~/.tmux/plugins/tpm/tpm'
 #
