--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -74,3 +74,8 @@ blue = "#65bddb"
 magenta = "#f17676"
 cyan = "#9debcf"
 white = "#ffffff"
+
+[keyboard]
+bindings = [
+  { key = "Return", mods = "Command", action = "ToggleSimpleFullscreen" },
+]
