feat(tmux): change tmux status bar style

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,13 +1,13 @@
 # == Ext ==
 set -g base-index 1
 set -g renumber-windows on
-set -g allow-rename off
-set -g automatic-rename off
+set -g allow-rename on
+set -g automatic-rename on
 set -g mode-keys vi
 set -g repeat-time 200
 set -g escape-time 10
 set -g set-titles on
-set -g set-titles-string "#S"
+set -g set-titles-string "#S - #W - #T"
 set -g focus-events on
 set -g mouse on
 
@@ -26,20 +26,7 @@ set -sa terminal-features ",*:RGB"
 # status bar
 set -g status on
 set -g status-interval 10
-# set -g status-position top
-# set -g status-justify centre
-# set -g window-status-separator ' '
-# set -g status-left-length 200
-# set -g status-right-length 200
-#
-# set -g status-bg '#f0f0f0'
-# set -g status-fg '#5c6166'
-# set -g status-left '#[bg=#a37acc]  #S  '
-#
-# set -g status-right '#[bg=#55b4d4]  #(date +"%a %h-%d %H:%M")  '
-#
-# set -wg window-status-format ' #[fg=#8a9199] #I #W '
-# set -wg window-status-current-format '#[bg=#f07171]  #W  '
+set -g status-position top
 
 # == Hotkeys ==
 # prefix
@@ -82,24 +69,28 @@ unbind s
 bind s choose-window -Z
 bind w choose-session -Z
 
+# reload configuration
+bind R source-file ~/.tmux.conf \; display-message "Tmux config reloaded!"
+
 # # == List of plugins ==
 set -g @plugin 'tmux-plugins/tpm'
 
 # == Theme ==
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,o,}"
-set -g @catppuccin_window_text "#W"
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_status_modules_right "host date_time"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+set -g @catppuccin_window_status_style 'rounded'
+
+set -g @catppuccin_window_current_text '#W #{?#{==:#T,#H},, - #T}'
+set -g @catppuccin_window_text '#W #{?#{==:#T,#H},, - #T}'
+
+set -g status-left ''
+set -g status-right '#{E:@catppuccin_status_application}'
+# set -agF status-right '#{E:@catppuccin_status_cpu}'
+set -ag status-right '#{E:@catppuccin_status_session}'
+set -ag status-right '#{E:@catppuccin_status_uptime}'
+# set -agF status-right '#{E:@catppuccin_status_battery}'
+
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 # == Theme ==
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
